--- a/index.Rmd
+++ b/index.Rmd
@@ -14,8 +14,8 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 
 **Instructor:** Kevin Shoemaker   
-**Teaching Assistant** Megan Osterhout (mosterhout3_at_gmail_dot_com)   
-**Website**: [naes.unr.edu/shoemaker/teaching/NRES-470](http://naes.unr.edu/shoemaker/teaching/NRES-470/index.html) 	
+**Teaching Assistants** Mia Goldman (miagoldman_at_nevada_dot_unr_dot_edu) and Adriana Parra (adrianaparra_at_nevada_dot_unr_dot_edu)   
+**Website**: [https://kevintshoemaker.github.io/NRES-470/](https://kevintshoemaker.github.io/NRES-470/) 	
 **Phone**: (775)682-7449			  		
 **Email**: kevinshoemaker_at_unr_dot_edu
  
@@ -23,12 +23,12 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 **Lecture & Discussion**: M, W at 10am (50 mins) (NOTE: please bring your laptop to class!)     
 **Lab**: F at 1pm (2 hrs 45 mins) (bring your laptop power cords- I will provide power strips and extension cords)  
 
-- Lectures and Labs will be held in **FA 337**     
+- Lectures and Labs will be online (due to the ongoing pandemic)     
 
 **Office hours**:   
 
-- Shoemaker: Wednesdays at 11am (1 hour) (FA 220E)     
-- Osterhout: Tuesdays at 11am (1 hour) (FA 231)     
+- Shoemaker: Wednesdays at 11am (1 hour) (online)     
+- Goldman: TBD (online)    
   
 
 ### Texts  
@@ -91,7 +91,6 @@ Graduate students will be subject to additional expectations in order to receive
 Missed exams and labs cannot be made up, except in the case of emergencies. If you miss a class meeting, it is your responsibility to talk to one of your classmates about what you missed. If you miss a lab meeting, you are still responsible for completing the lab activities and write-up on your own time. Whenever possible, please let me know in advance if you are going to miss class or lab.
 
 ### Top Hat
-
 We will be using the [Top Hat](www.tophat.com) ([www.tophat.com](www.tophat.com)) classroom response system in class. You will be able to submit answers to in-class questions using Apple or Android smartphones and tablets, laptops, or through text message.  
 
 You can visit the Top Hat Overview (https://success.tophat.com/s/article/Student-Top-Hat-Overview-and-Getting-Started-Guide) within the Top Hat Success Center which outlines how you will register for a Top Hat account, as well as providing a brief overview to get you up and running on the system.
@@ -117,7 +116,31 @@ Surreptitious or covert video-taping of class or unauthorized audio recording of
 Your student fees cover usage of the University Math Center [(775) 784-4433], University Tutoring Center [(775) 784-6801], and [University Writing Center (775) 784-6030]. These centers support your classroom learning; it is your responsibility to take advantage of their services.
 
 ### This is a safe space
-The University of Nevada, Reno is committed to providing a safe learning and work environment for all. If you believe you have experienced discrimination, sexual harassment, sexual assault, domestic/dating violence, or stalking, whether on or off campus, or need information related to immigration concerns, please contact the University's Equal Opportunity & Title IX Office at 775-784-1547. Resources and interim measures are available to assist you. For more information, please visit: http://www.unr.edu/equal-opportunity-title-ix .
+The University of Nevada, Reno is committed to providing a safe learning and work environment for all. If you believe you have experienced discrimination, sexual harassment, sexual assault, domestic/dating violence, or stalking, whether on or off campus, or need information related to immigration concerns, please contact the University's Equal Opportunity & Title IX Office at 775-784-1547. Resources and interim measures are available to assist you. For more information, please visit: http://www.unr.edu/equal-opportunity-title-ix.
+
+### Statement on COVID-19 Training Policies
+Students must complete and follow all guidelines as stated in the Student COVID-19 Training modules, or any other trainings or directives provided by the University.
+
+### Statement on COVID-19 Face Coverings
+In response to COVID-19, and in alignment with State of Nevada Governor Executive Orders, Roadmap to Recovery for Nevada plans, Nevada System of Higher Education directives, the University of Nevada President directives, and local, state, and national health official guidelines face coverings are required at all times while on campus, except when alone in a private office. This includes the classroom, laboratory, studio, creative space, or any type of in-person instructional activity, and public spaces.
+
+A “face covering” is defined as a “covering that fully covers a person’s nose and mouth, including without limitation, cloth face mask, surgical mask, towels, scarves, and bandanas” (State of Nevada Emergency Directive 024).
+
+Students that cannot wear a face covering due to a medical condition or disability, or who are unable to remove a mask without assistance may seek an accommodation through the Disability Resource Center.
+
+### Statement on COVID-19 Social Distancing:
+Face coverings are not a substitute for social distancing. Students shall observe current social distancing guidelines where possible in accordance with the Phase we are in while in the classroom, laboratory, studio, creative space (hereafter referred to as instructional space) setting and in public spaces. Students should avoid congregating around instructional space entrances before or after class sessions. If the instructional space has designated entrance and exit doors students are required to use them. Students should exit the instructional space immediately after the end of instruction to help ensure social distancing and allow for the persons attending the next scheduled class session to enter.
+
+### Statement on COVID-19 Disinfecting Your Learning Space
+Disinfecting supplies are provided for you to disinfect your learning space. You may also use your own disinfecting supplies.
+
+### Statement on COVID-19, COVID-19 Like Symptoms, and Contact with Someone Testing Positive for COVID-19
+Students must conduct daily health checks in accordance with CDC guidelines. Students testing positive for COVID 19, exhibiting COVID 19 symptoms or who have been in direct contact with someone testing positive for COVID 19 will not be allowed to attend in-person instructional activities and must leave the venue immediately. Students should contact the Student Health Center or their health care provider to receive care and who can provide the latest direction on quarantine and self-isolation. Contact your instructor immediately to make instructional and learning arrangements.
+
+### Statement on Failure to Comply with Policy (including as outlined in this Syllabus) or Directives of a University Employee
+In accordance with section 6,502 of the University Administrative Manual, a student may receive academic and disciplinary sanctions for failure to comply with policy, including this syllabus, for failure to comply with the directions of a University Official, for disruptive behavior in the classroom, or any other prohibited action. “Disruptive behavior" is defined in part as behavior, including but not limited to failure to follow course, laboratory or safety rules, or endangering the health of others. A student may be dropped from class at any time for misconduct or disruptive behavior in the classroom upon recommendation of the instructor and with approval of the college dean. A student may also receive disciplinary sanctions through the Office of Student Conduct for misconduct or disruptive behavior, including endangering the health of others, in the classroom. The student shall not receive a refund for course fees or tuition.
+
+
 
 
 ```{r echo=FALSE, eval=FALSE}
