--- a/index.Rmd
+++ b/index.Rmd
@@ -16,12 +16,11 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 **Instructor:** Kevin Shoemaker   
 **Teaching Assistants** Mia Goldman (miagoldman_at_nevada_dot_unr_dot_edu) and Adriana Parra (adrianaparra_at_nevada_dot_unr_dot_edu)   
 **Website**: [https://kevintshoemaker.github.io/NRES-470/](https://kevintshoemaker.github.io/NRES-470/) 	
-**Phone**: (775)682-7449			  		
 **Email**: kevinshoemaker_at_unr_dot_edu
  
 ### Course Meeting Times
-**Lecture & Discussion**: M, W at 10am (50 mins) (NOTE: please bring your laptop to class!)     
-**Lab**: F at 1pm (2 hrs 45 mins) (bring your laptop power cords- I will provide power strips and extension cords)  
+**Lecture & Discussion**: M, W at 10am (50 mins)     
+**Lab**: F at 1pm (2 hrs 45 mins)  
 
 - Lectures and Labs will be online (due to the ongoing pandemic)     
 
@@ -39,7 +38,6 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 ### Software   
 - [InsightMaker- free web-based systems modeling tool](https://insightmaker.com/)(no installation needed)        
 - [R- free statistical programming language](https://cran.r-project.org/)      
-- [Program MARK](http://warnercnr.colostate.edu/~gwhite/mark/mark.htm)      
 - MS Excel (hopefully you already have this or equivalent spreadsheet software on your laptop!)
 
 ### Prerequisites    
@@ -73,7 +71,7 @@ NOTE: Graduate students enrolled in NRES 670 will have an additional 50 pts used
 Grading scale: A (100 to 93), A- (92 to 90), B+ (89 to 87), B (86 to 83), B- (82 to 80), C+ (79 to 77), C (76 to 73), C- (72 to 70), D+ (69 to 67), D (66 to 63), D- (62 to 60), F (below 60). 
 
 ### Exams:
-There will be two midterm exams and a comprehensive final exam. These will consist of multiple-choice, short-answer questions, and essay questions requiring synthesis of ideas and critical thinking. The midterm and final exams will be cumulative, and based on all information presented up through the week prior to the exam.
+There will be two midterm exams and a comprehensive (cumulative) final exam. These will consist of multiple-choice, short-answer questions, and essay questions requiring synthesis of ideas and critical thinking. The midterm and final exams will be cumulative, and based on all information presented up through the week prior to the exam.
 
 ### Lectures
 Lecture grades will be based primarily on participation and short Top Hat quizzes. Participation is essential to the learning process (and to our mutual enjoyment of this class). Learning is not a passive process; students are expected to engage with the material in class rather than simply listen and take notes. You should be prepared in class to ask questions, to answer questions posed by other students, and to engage in in-class problem-solving activities.   
@@ -82,7 +80,7 @@ Lecture grades will be based primarily on participation and short Top Hat quizze
 Lab exercises will focus on applying concepts and methods introduced in lectures, and will involve real data and problems in wildlife conservation and management wherever possible. Graded lab assignments will involve figures, tables, InsightMaker models and R code (when applicable) and responses to questions in short-answer format. Laboratory write-ups will be due the following lab period, unless otherwise specified. 
 
 ### Final group project 
-Students will work in groups of 3-4 to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). Grading will be based on finished products (written and oral presentations) as well as participation and peer evaluations. 
+Students will work in groups of ~4 to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). Grading will be based on finished products (written and oral presentations) as well as participation and peer evaluations. 
 
 ### Graduate credit (for students enrolled in NRES 670) 
 Graduate students will be subject to additional expectations in order to receive graduate credit for this course. In particular, graduate students will be expected to develop an original lecture and lead an original lab activity related to their lecture. Graduate students will also be expected to achieve a deeper understanding of the course material, and therefore will be assigned additional readings from the scientific literature and will be expected to participate as leaders in discussions and lab activities.
@@ -95,9 +93,9 @@ We will be using the [Top Hat](www.tophat.com) ([www.tophat.com](www.tophat.com)
 
 You can visit the Top Hat Overview (https://success.tophat.com/s/article/Student-Top-Hat-Overview-and-Getting-Started-Guide) within the Top Hat Success Center which outlines how you will register for a Top Hat account, as well as providing a brief overview to get you up and running on the system.
 
-An invitation will be sent to you by email, but if don’t receive this email, you can register by simply visiting our course website: [https://app.tophat.com/e/992461](https://app.tophat.com/e/992461)       
+An invitation will be sent to you by email, but if don’t receive this email, you can register by simply visiting our course website: [https://app.tophat.com/e/648264](https://app.tophat.com/e/648264)       
 
-Note: our Course Join Code is 992461
+Note: our Course Join Code is 648264
 
 Top Hat may require a paid subscription, and a full breakdown of all subscription options available can be found here: [www.tophat.com/pricing](www.tophat.com/pricing). 
 
