--- a/INTRO.Rmd
+++ b/INTRO.Rmd
@@ -29,15 +29,15 @@ First let's take a quick walk through the online syllabus:
 NOTE: you can download a printable PDF version of the syllabus [here](Syllabus.pdf)     
 
 ## Textbook
-Please pick up a copy of the course textbook (A Primer of Ecology, by Nick Gotelli) as soon as possible. You can purchase the textbook new or used on [Amazon](https://www.amazon.com/Primer-Ecology-Fourth-Nicholas-Gotelli/dp/0878933182/ref=sr_1_1?s=books&ie=UTF8&qid=1484867155&sr=1-1&keywords=a+primer+of+ecology). Previous editions (especially 3rd edition) are acceptable as well. All other readings will be posted on [WebCampus](https://unr.instructure.com/).
+I have provided PDF copies of all chapters of the course textbook (A Primer of Ecology, by Nick Gotelli) on WebCampus. However, I encourage you to pick up a copy of the textbook- you can purchase the textbook new or used on [Amazon](https://www.amazon.com/Primer-Ecology-Fourth-Nicholas-Gotelli/dp/0878933182/ref=sr_1_1?s=books&ie=UTF8&qid=1484867155&sr=1-1&keywords=a+primer+of+ecology). Previous editions (especially 3rd edition) are acceptable as well. All other readings will be posted on [WebCampus](https://unr.instructure.com/).
 
 ## Software
-Skills with specialized software and computer programming is critical in modern-day conservation biology and wildlife management. In this class, you will gain familiarity with using some specialized tools (e.g., [Program MARK](http://www.phidot.org/software/mark/)) and some computer programming (e.g., [InsightMaker](https://insightmaker.com/), [R](https://cran.r-project.org/)) and I hope by the end of this class you will understand how powerful and useful these tools can be -- and not just for population ecology!
+Skills with specialized software and computer programming are critical in modern-day conservation biology and wildlife management. In this class, you will gain familiarity with using some specialized tools (e.g., [Program MARK](http://www.phidot.org/software/mark/)) and some computer programming (e.g., [InsightMaker](https://insightmaker.com/), [R](https://cran.r-project.org/)) and I hope by the end of this class you will understand how powerful and useful these tools can be -- and not just for population ecology!
 
 See the [links page](Links.html) for some useful references (I will post more links shortly, including some R tutorials!).
 
 ## In-class activities
-Most class periods will include a short hands-on modeling exercise (mini-lab) to give everyone a chance to apply the population ecology concepts we talked about in lecture. Many class periods will also include short Top Hat questions (discussion questions, multiple choice, etc), mostly to give me feedback about what concepts might need more reinforcing. Your responses to these questions will also help inform your participation score. _NOTE: you will not be penalized for incorrect responses in TopHat_!   
+This semester I will provide lecture materials, videos and readings prior to our class meetings. Most class periods will be devoted to discussion and hands-on modeling exercises (mini-labs) to give everyone a chance to apply the population ecology concepts we talked about in lecture. Many class periods will also include short Top Hat questions (discussion questions, multiple choice, etc), mostly to give me feedback about what concepts might need more reinforcing. Your responses to these questions will also help inform your participation score. _NOTE: you will not be penalized for incorrect responses in TopHat_!   
 
 ## Out-of-class activities
 To make the most of this course, you will need to devote significant time outside of class on:    
@@ -47,7 +47,7 @@ To make the most of this course, you will need to devote significant time outsid
 3. Working on your final group projects.      
 
 ## Final projects
-It is never too early to start thinking about final project ideas and datasets. For the final projects, you will work in small groups to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). I will compile a list of online databases that might be useful for your projects that I will post to the course website. In the meantime, start thinking about what species you might be interested in modeling, and what conservation and management strategies you might want to test!      
+It is never too early to start thinking about final project ideas and datasets. For the final projects, you will work in small groups to perform a population viability analysis (PVA) to assess conservation or management actions for a species of conservation concern (species of your choice!). I will compile a list of online databases that might be useful for your projects that I will post to the course website. In the meantime, start thinking about what species you might be interested in modeling, and what conservation and management strategies you might want to test!      
 
 ## Making up classes and labs
 Lectures and laboratory exercises will be posted online in enough detail to complete and study on your own time. BUT, much of the benefit of this course will come from interactions with peers and the instructor during class and lab periods and I expect you to be a full participant in this class. Please let me know in advance if you need to miss class for any reason.    
@@ -56,7 +56,7 @@ Lectures and laboratory exercises will be posted online in enough detail to comp
 I need your frequent and honest feedback in order to make sure that the level and pace are appropriate! Please don't hesitate to provide constructive suggestions for improving this class!
 
 ## Introductions
-Please take the time to introduce yourself in more detail on the "WebCampus" site -- I posted a question on the discussion board.  
+Please take the time to introduce yourself in more detail on WebCampus -- I posted a question on the discussion board.  
 
 ## Any questions??
 
