--- a/LAB1.Rmd
+++ b/LAB1.Rmd
@@ -322,6 +322,7 @@ The simulations that you ran above produced population growth curves that were v
         -  *Short answer (1b.)*
         -  *Short answer (1c.)*
         -  *Short answer (1d.)*
+        -  *Submit Excel file (1e.)*
 
     +  **Exercise 2**
         -  *Short answer (2a.)*
