--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -14,6 +14,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Please check for updates frequently!
 
+NOTE: in 2021 we are online, the course materials are available for you to work through on your own pace, and you are only required to attend one 'lecture' period per week (M or W). So we will mostly follow the schedule listed below, but the items labeled 'LECTURE' are available online (asynchronously). Hope this makes sense!!
+
+
 ```{r include=FALSE}
 courseSchedule <- read.csv("CourseSchedule.csv")
 ```
