--- a/LECTURE3.Rmd
+++ b/LECTURE3.Rmd
@@ -25,11 +25,12 @@ Or in a more verbose form...
 
 > "I think I may make fairly two postulata. First, that food is necessary to the existence of man. Secondly, that the passion between the sexes is necessary and will remain nearly in its present state ... Assuming then my postulata as granted, I say, that the power of population is indefinitely greater than the power in the earth to produce subsistence for man. Population, when unchecked, increases in a *geometrical ratio*. Subsistence increases only in an *arithmetical ratio*. A slight acquaintance with numbers will show the immensity of the first power in comparison of the second. By the law of our nature which makes food necessary to the life of man, the effects of these two unequal powers must be kept equal. This implies a strong and constantly operating check on population from the difficulty of subsistence. This difficulty must fall somewhere and must necessarily be severely felt by a large portion of mankind..."
 
-And his argument can be summed up in this logical argument:
+Finally, his economic argument can be summed up as follows:
 
-1. That the increase of population is necessarily limited by the means of subsistence,
-2. That population does invariably increase when the means of subsistence increase, and,
-3. That the superior power of population is repressed by moral restraint, vice and misery
+1. There are always hard limits to (human) population growth, and these limits have to do with food availability,
+2. When there is more food available, humans will tend to use that toward reproduction, 
+3. Which will only temporarily forestall a crisis when we inevitably reach the limits to growth, leading to.:
+4. Widespread famine, disease etc. - especially among poor and disadvantaged populations.
 
 Is this an optimistic message or a pessimistic message?
 
@@ -41,11 +42,11 @@ Is this an optimistic message or a pessimistic message?
 ![](darwin1.jpg)
 
 
-Interestingly, in 1838 (four years after Malthus’ death), Charles Darwin, just back from his trip on HMS Beagle (1831–6), was searching for possible mechanisms to explain the origin of species. On reading Malthus’ *Essay on the principle of population*, he realized one of the possible implications of the checks that controlled population growth and wrote: 
+Interestingly, in 1838 (four years after Malthus’ death), Charles Darwin, just back from his trip on HMS Beagle (1831–1836), was searching for possible mechanisms to explain the origin of species. On reading Malthus’ *Essay on the principle of population*, he realized one of the possible implications of the checks that controlled population growth (i.e., that the power of exponential growth means that many individuals will be born that won't be able to survive to adulthood due to resource limitations) and wrote: 
 
 > '...favourable variations would tend to be preserved, and unfavourable ones to be destroyed ... The result of this would be the formation of a new species. Here, then, I had at last got a theory by which to work.' - Charles Darwin 
 
-Twenty one years later Darwin published his book *On the origin of species by means of natural selection*. It too raised a storm of controversy and protest.
+Twenty one years later Darwin published his book *On the origin of species by means of natural selection*. Like Malthus' work, it too raised a storm of controversy and protest.
 
 So, what do you think? Mathus' *Essay* was extremely influential, right!!
 
